--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,10 @@ android {
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+    /* add Data Binding  */
+    dataBinding {
+        enabled true
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -30,7 +34,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
-//ViewModel and LiveData
+    /* Android Architecture Component - LiveData & ViewModel  */
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
 
     //Recyclerview
@@ -47,6 +51,16 @@ dependencies {
 
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.8.0'
+    //picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
+    // optional - Kotlin Extensions and Coroutines support for Room
+    implementation "androidx.room:room-ktx:2.1.0"
+    implementation "androidx.room:room-runtime:2.1.0"
+    //rxjava sp for room.
+    implementation "androidx.room:room-rxjava2:2.1.0"
+    //for kotlin use kapt
+    annotationProcessor "androidx.room:room-compiler:2.1.0"
 
     // Paging
     implementation "androidx.paging:paging-runtime:2.1.0"
@@ -55,6 +69,12 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxjava:2.2.7'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
 
+    //dagger 2
+    implementation 'com.google.dagger:dagger:2.21'
+    implementation 'com.google.dagger:dagger-android:2.21'
+    implementation 'com.google.dagger:dagger-android-support:2.21'
+    //test room
+    testImplementation "androidx.room:room-testing:2.1.0"
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
